@@ -1,3 +1,8 @@
+2004-05-15  Albert Astals Cid  <tsdgeos@terra.es>
+	* Sort map chooser list entries
+	* Mantain aspect ratio of map images in map chooser
+	* Use smoothScale instead of scale in map chooser
+
 2004-05-14  Albert Astals Cid  <tsdgeos@terra.es>
 	* Zoom available in map mode, possibly needs a BIG tooltip on how to
 use.
